--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,11 +1,17 @@
-html,
+html {
+  min-width: 360px;
+  scroll-behavior: smooth;
+  
+}
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
-
+footer {
+  background-color: inherit
+}
 a {
   color: inherit;
   text-decoration: none;
@@ -29,3 +35,11 @@ a {
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: 'Lato';
+  font-style: normal;
+  font-weight: 100 900;
+  font-display: optional;
+  src: url(/fonts/lato-regular.woff2) format('woff2')
+}
