--- a/styles/globals.css
+++ b/styles/globals.css
@@ -39,7 +39,21 @@ a {
 @font-face {
   font-family: 'Lato';
   font-style: normal;
-  font-weight: 100 900;
+  font-weight: 400;
   font-display: optional;
-  src: url(/fonts/lato-regular.woff2) format('woff2')
+  src: local(''), url("/fonts/lato-regular.woff2") format('woff2')
+}
+
+@font-face {
+  font-family: 'Lato';
+  font-style: bold;
+  font-weight: 500;
+  src: local(''), url("/fonts/lato-bold.woff2") format('woff2');
+}
+
+@font-face {
+  font-family: 'Lato';
+  font-style: italic;
+  font-weight: 450;
+  src: local(''), url("/fonts/lato-italic.woff2") format('woff2');
 }
